# fora

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  netlify.toml  pyproject.toml
.claude/skills/add-conference/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
data/: VERIFY_TODO.md  ccfchip2026.json  chinasoft2025.json
data/forums_detail/: CF01.json  CF02.json  CF03.json  CF04.json  CF05.json  CF06.json  CF07.json  CF08.json  CF09.json  CF10.json  CF11.json  CF12.json  CF13.json  CF14.json  CF15.json  CF16.json  CF17.json  CF18.json  CF19.json  CF20.json  CF21.json  CF22.json  CF23.json  CF24.json  CF25.json  CF26.json  CF27.json  CF28.json  CF29.json  CF30.json  CF31.json  CF32.json  CF33.json  CF34.json  CF35.json  CF36.json  CF37.json  CF38.json  CF39.json  CF40.json  (+8 more)
schema/: schema.json
source/: SITE_ANALYSIS.md  batch_slice.py  build_dataset.py  build_manifest.py  check_updates.py  enrichment.py  extract_structured.py  fetch_all.py  slice_poster.py  topics.json  validate.py
source/ccfchip2026/: enrichment.json
source/chinasoft2025/: build.py  enrichment.json  fetch.py
source/extracted/: forum_images.json  forum_source_urls.json  people.json  program_committee.json  sponsors.json  texts.json
src/conf_scheduler/: __init__.py
web/: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
web/public/: manifest.webmanifest  reminder-sw.js
web/scripts/: build-sw.mjs
web/src/: App.tsx  main.tsx  types.ts  vite-env.d.ts
web/tests/: permalink-scroll.mjs
(+168 files in other folders)
