[project]
name = "conf-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SUPER", email = "superpung.lee@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
conf-scheduler = "conf_scheduler:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
